# cmska

./: .env.override  .gitignore  README.md  docker-compose.yaml
app/backend/: .env  Dockerfile  main.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: a4dbfd4673ca_.py
app/backend/api/: deps.py
app/backend/api/auth/: auth.py
app/backend/auth/: user.py
app/backend/core/: db.py  settings.py
app/backend/models/: alembic_init.py  user.py
app/backend/templates/: index.jinja2
app/frontend/: Dockerfile  package.json  vite.config.js
app/frontend/src/: App.vue  main.js  routes.js
app/frontend/src/components/: SubComponent.vue
app/frontend/src/stores/: DummyStore.js
backend/: backend.dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/app/: .dockerignore  main.py
backend/app/app/api/: deps.py
backend/app/app/auth/: user.py
backend/app/app/core/: settings.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  package.json  windi.config.js
frontend/assets/scss/: main.scss
frontend/components/: Example.vue  MySidebar.vue
frontend/components/Atom/: AtomTextWithIcon.vue
frontend/components/Base/: BaseAvatar.vue  BaseButton.vue  BaseButtonGroup.vue  BaseDropdown.vue  BaseDropdownItem.vue  BaseIcon.vue
frontend/components/Molecule/: MoleculeDropdown.vue
frontend/components/UI/: ui-aside.vue
frontend/composables/: event.js  useApi.js
frontend/middleware/: auth.js
frontend/pages/: eg.vue  index.vue
frontend/pages/admin/: index.vue
frontend/pages/auth/: login.vue  register.vue
(+5 files in other folders)
